# ecs-1password-secret-injector

./: README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
tests/: test_module1.py
