[tool.poetry]
name = "ecs-1password-secret-injector"
version = "0.1.0"
description = "Injector service to pass temporary secrets from 1Password to ECS"
authors = ["Aaron Grisez <aaron@aarongrisez.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.56"
onepasswordconnectsdk = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
tox = "^4.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
